# sql-databses-with-python

./: 01_raw_connectionto_db.ipynb  02_writing_to_database.ipynb  README.md  pyproject.toml
