[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["olaola-0 <isholamyson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
mysql-connector-python = "^8.2.0"
jupyter = "^1.0.0"
pandas = "^2.1.2"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
